# golf_bot

./: README.md  demo.ipynb  demo.py  golf_bot.py  pyproject.toml  scheduled.py
